archetypes/quick_rest_vertx-archetype/src/main/resources/archetype-resources/src/main/fabric8/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vertx-rest
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
