archetypes/quick_rest_vertx-archetype/src/main/resources/archetype-resources/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: vertx-rest
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vertx-rest
